--- a/Zivalske_Ordinacije/Login.xaml
+++ b/Zivalske_Ordinacije/Login.xaml
@@ -5,20 +5,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zivalske_Ordinacije"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
+        Height="450" Width="800">
+    <Window.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Color="Aqua"  Offset="0.1" />
+            <GradientStop Color="Aquamarine" Offset="0.5" />
+            <GradientStop Color="BlueViolet" Offset="3" />
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
         <Grid Name="GridLogin" Visibility="Hidden">
 
-            <TextBox x:Name="username" HorizontalAlignment="Left" Margin="321,130,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="username" HorizontalAlignment="Left" Margin="321,130,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" />
             <TextBox x:Name="password" HorizontalAlignment="Left" Margin="321,169,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
             <Button x:Name="Login1" Content="Button" HorizontalAlignment="Left" Margin="360,217,0,0" VerticalAlignment="Top" Click="Login1_Click"/>
             <Label x:Name="label1" Content="Nimate accounta?" HorizontalAlignment="Left" Margin="441,227,0,0" VerticalAlignment="Top" MouseDown="label1_MouseDown"/>
 
         </Grid>
         <Grid Name="GridRegistracija" Visibility="Visible">
-            <TextBox x:Name="r_username" HorizontalAlignment="Left" Margin="329,130,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <TextBox x:Name="r_password" HorizontalAlignment="Left" Margin="329,165,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <Button x:Name="Registracija" Content="Button" HorizontalAlignment="Left" Margin="369,217,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.086,-1.158" Click="Registracija_Click"/>
+            <TextBox x:Name="r_username" FontWeight="Medium" FontFamily="Calibri" Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left"
+                     Margin="280,170,0,0" TextWrapping="Wrap" Text="Enter username" FontSize="20"
+                     Background="Transparent" VerticalAlignment="Top" Width="236" GotFocus="r_username_GotFocus" LostFocus="r_username_LostFocus" Height="29"/>
+            <TextBox x:Name="r_password"  FontWeight="Medium" FontFamily="Calibri" Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left" Margin="281,230,0,0" TextWrapping="Wrap"
+                     Text="Enter password" FontSize="20" Background="Transparent" VerticalAlignment="Top"
+                     Width="235" GotFocus="r_password_GotFocus" LostFocus="r_password_LostFocus" Height="29"/>
+            <Button x:Name="Registracija"  Content="Register" Foreground="White" FontFamily="Calibri" FontSize="24" HorizontalAlignment="Center" Margin="0,288,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.086,-1.158" Click="Registracija_Click"
+                    Height="40" Width="130">
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border  x:Name="border" CornerRadius="15" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Foreground" Value="Gray" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+ 
+                </Button.Template>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="MediumPurple" Offset="0.2" />
+                        <GradientStop Color="BlueViolet" Offset="0.6" />
+                        <GradientStop Color="Purple" Offset="1" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <Label x:Name="label_title" Content="Registration" HorizontalAlignment="Center" Margin="0,64,0,0" VerticalAlignment="Top" 
+                   FontSize="40" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
+            <Label Content="Username" HorizontalAlignment="Left" Margin="281,144,0,0" VerticalAlignment="Top"
+                   Foreground="BlueViolet" FontSize="14"/>
+            <Label Content="Password" HorizontalAlignment="Left" Margin="280,204,0,0" VerticalAlignment="Top" 
+                   RenderTransformOrigin="-0.261,1.079" Foreground="BlueViolet" FontSize="14"/>
 
         </Grid>
     </Grid>
