--- a/Zivalske_Ordinacije/Login.xaml
+++ b/Zivalske_Ordinacije/Login.xaml
@@ -23,7 +23,7 @@
                          Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left" 
                          Margin="280,229,0,0" VerticalAlignment="Top"  FontSize="20"
                      Background="Transparent" Width="236"  Height="29"/>
-            <Button x:Name="Login1" Content="Register" Foreground="White" FontFamily="Calibri"
+            <Button x:Name="Login1" Content="Login" Foreground="White" FontFamily="Calibri"
                     FontSize="24" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top"
                     RenderTransformOrigin="1.086,-1.158" Click="Login1_Click"
                     Height="40" Width="130">
@@ -42,15 +42,18 @@
                     </LinearGradientBrush>
                 </Button.Background>
             </Button>
-                    
-                    
-            <Label x:Name="label1" Content="Nimate accounta?" HorizontalAlignment="Left" Margin="454,263,0,0" VerticalAlignment="Top" MouseDown="label1_MouseDown"/>
+
+
+            <Label x:Name="label1" Content="Don't have an account?" HorizontalAlignment="Center" Margin="0,340,0,0" VerticalAlignment="Top"
+                   Foreground="BlueViolet" FontSize="14" MouseDown="label1_MouseDown"/>
             <Label Content="Login" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" 
                    FontSize="40" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
             <Label Content="Username" HorizontalAlignment="Left" Margin="281,140,0,0" VerticalAlignment="Top"
                    Foreground="BlueViolet" FontSize="14"/>
             <Label Content="Password" HorizontalAlignment="Left" Margin="280,200,0,0" VerticalAlignment="Top" 
                    RenderTransformOrigin="-0.261,1.079" Foreground="BlueViolet" FontSize="14"/>
+            <Label Content="Change Password" HorizontalAlignment="Left"
+                   Margin="281,263,0,0" VerticalAlignment="Top" Foreground="BlueViolet" FontSize="12" MouseDown="Label_MouseDown"/>
 
         </Grid>
         <Grid Name="GridRegistracija" Visibility="Hidden" RenderTransformOrigin="0.783,0.496" Height="434" VerticalAlignment="Top">
@@ -90,7 +93,73 @@
                      Background="Transparent" Width="236"  Height="29"/>
             <Label Content="Confirm password" HorizontalAlignment="Left" Margin="278,261,0,0" VerticalAlignment="Top" 
                    RenderTransformOrigin="-0.261,1.079" Foreground="BlueViolet" FontSize="14"/>
-            <CheckBox x:Name="ShowPassword" Content="Show password" Foreground="BlueViolet" FontSize="12" HorizontalAlignment="Left" Margin="281,320,0,0" VerticalAlignment="Top" Height="16" Width="120" Checked="ShowPassword_Checked" Unchecked="ShowPassword_Unchecked"/>
+            <CheckBox x:Name="ShowPassword" Content="Show password" Foreground="BlueViolet" FontSize="12" 
+                      HorizontalAlignment="Left" Margin="281,320,0,0" VerticalAlignment="Top" Height="16" Width="120"
+                      Checked="ShowPassword_Checked" Unchecked="ShowPassword_Unchecked"/>
+            <Label x:Name="HaveAcc" Content="Already have an account?" HorizontalAlignment="Center"
+               Margin="0,395,0,0" VerticalAlignment="Top" Foreground="BlueViolet" FontSize="14" MouseDown="HaveAcc_MouseDown"/>
+        </Grid>
+
+        <Grid Name="SpremeniPasswordGrid" Visibility="Hidden" RenderTransformOrigin="0.783,0.496" Height="434" VerticalAlignment="Top">
+            <Label x:Name="label_title_pass" Content="Change password" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" 
+                   FontSize="40" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
+            <TextBox x:Name="cp_username" FontWeight="Medium" FontFamily="Calibri" Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left"
+                     Margin="280,166,0,0" TextWrapping="Wrap"  FontSize="20" Text="Enter your username"
+                     Background="Transparent" VerticalAlignment="Top" Width="236" Height="29" GotFocus="cp_username_GotFocus" LostFocus="cp_username_LostFocus"/>
+            <Label Content="Username" HorizontalAlignment="Left" Margin="281,140,0,0" VerticalAlignment="Top"
+                   Foreground="BlueViolet" FontSize="14"/>
+            <Button x:Name="User"  Content="Find User" Foreground="White" FontFamily="Calibri" FontSize="24" HorizontalAlignment="Center" Margin="0,230,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.086,-1.158" Click="User_Click"
+                    Height="40" Width="130">
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="MediumPurple" Offset="0.2" />
+                        <GradientStop Color="BlueViolet" Offset="0.6" />
+                        <GradientStop Color="Purple" Offset="1" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+        </Grid>
+
+        <Grid Name="ChangePasswordGrid" Visibility="Hidden" RenderTransformOrigin="0.783,0.496" Height="434" VerticalAlignment="Top">
+            <Label x:Name="label_title_password" Content="Change password" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" 
+                   FontSize="40" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
+            <Label Content="Old password" HorizontalAlignment="Left" Margin="280,130,0,0" VerticalAlignment="Top" 
+                   RenderTransformOrigin="-0.261,1.079" Foreground="BlueViolet" FontSize="14"/>
+            <Label Content="New password" HorizontalAlignment="Left" Margin="278,191,0,0" VerticalAlignment="Top" 
+                   RenderTransformOrigin="-0.261,1.079" Foreground="BlueViolet" FontSize="14"/>
+            <PasswordBox x:Name="old_password" PasswordChar="*" FontWeight="Medium" FontFamily="Calibri" 
+                         Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left" 
+                         Margin="280,159,0,0" VerticalAlignment="Top"  FontSize="20"
+                     Background="Transparent" Width="236"  Height="29"/>
+            <PasswordBox x:Name="new_password" PasswordChar="*" FontWeight="Medium" FontFamily="Calibri" 
+                         Foreground="White" BorderBrush="White" BorderThickness="0,0,0,2" HorizontalAlignment="Left" 
+                         Margin="280,216,0,0" VerticalAlignment="Top"  FontSize="20"
+                     Background="Transparent" Width="236"  Height="29"/>
+            <Button x:Name="ChangePass"  Content="Change password" Foreground="White" 
+                    FontFamily="Calibri" FontSize="24" HorizontalAlignment="Center" Margin="0,283,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.086,-1.158" Click="ChangePass_Click"
+                    Height="40" Width="180">
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="MediumPurple" Offset="0.2" />
+                        <GradientStop Color="BlueViolet" Offset="0.6" />
+                        <GradientStop Color="Purple" Offset="1" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
         </Grid>
 
     </Grid>
