--- a/Zivalske_Ordinacije/MainWindow.xaml
+++ b/Zivalske_Ordinacije/MainWindow.xaml
@@ -37,7 +37,7 @@
             <Button x:Name="Veterinarji" Content="Veterinarji Ordinacij" Foreground="White" FontFamily="Calibri"
                     FontSize="24" HorizontalAlignment="Center" Margin="0,200,0,0" VerticalAlignment="Top"
                     RenderTransformOrigin="1.086,-1.158"
-                    Height="40" Width="300">
+                    Height="40" Width="300" Click="Veterinarji_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
@@ -74,7 +74,30 @@
             </Button>
         </Grid>
         <Grid Name="GridOrdinacije" Visibility="Visible">
-            <Label Content="Živalske Ordinacije" HorizontalAlignment="Left" Margin="29,42,0,0" VerticalAlignment="Top" 
+            <Button x:Name="Back" Content="Back" Foreground="White" FontFamily="Calibri"
+                    FontSize="24" HorizontalAlignment="Left" Margin="853,37,0,0" VerticalAlignment="Top"
+                    RenderTransformOrigin="1.086,-1.158"
+                    Height="40" Width="100" Click="Back_Click">
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="MediumPurple" Offset="0.2" />
+                        <GradientStop Color="BlueViolet" Offset="0.6" />
+                        <GradientStop Color="Purple" Offset="1" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <Button x:Name="Edit" Content="Edit" Foreground="White" FontFamily="Calibri"
+                    FontSize="24" HorizontalAlignment="Left" Margin="853,37,0,0" VerticalAlignment="Top"
+                    RenderTransformOrigin="1.086,-1.158"
+                    Height="40" Width="100" >
+                <Label Content="Živalske Ordinacije" HorizontalAlignment="Left" Margin="29,42,0,0" VerticalAlignment="Top" 
                    FontSize="30" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
             <ListView x:Name="listView" ItemsSource="{Binding}" Margin="29,94,391,94" SelectionChanged="listView_SelectionChanged">
                 <ListView.View>
@@ -144,8 +167,22 @@
                 </Button.Background>
             </Button>
         </Grid>
+        <Grid Name="GridVet" Visibility="Hidden">
+            <ListView x:Name="listVet" ItemsSource="{Binding}" Margin="29,94,391,94" >
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="ID" DisplayMemberBinding="{Binding vet_id}"/>
+                        <GridViewColumn Header="Ime" DisplayMemberBinding="{Binding ime_vet}"/>
+                        <GridViewColumn Header="Priimek" DisplayMemberBinding="{Binding priimek_vet}"/>
+                        <GridViewColumn Header="Naziv" DisplayMemberBinding="{Binding naziv_vet}"/>
+                        <GridViewColumn Header="Ordinacija" DisplayMemberBinding="{Binding ime_ord}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <Label Content="Veterinarji živalskih ordinacij" HorizontalAlignment="Left" Margin="29,42,0,0" VerticalAlignment="Top" 
+                   FontSize="30" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
+        </Grid>
 
 
-
-    </Grid>
+        </Grid>
 </Window>
